# Dat-IA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  project_context.xml  pyproject.toml  ui.py
.github/workflows/: ci.yml
app/: main.py
app/db/: connect_db.py
app/formatting/: __init__.py  column_labels.py  result_formatter.py
app/memory/: query_memory.py  query_memory_v2.py
app/observability/: __init__.py  langsmith.py
app/optimizer/: query_optimizer.py
app/validation/: sql_validator.py
data/: ddl.json
docs/curso/: clase-1-por-que-falla.html  clase-2-validacion-deterministica.html  clase-3-llm-as-a-judge.html  clase-4-bucle-autocorreccion.html  clase-5-guardrail-resultados.html  clase-6-langgraph-conversacional.html  clase-7-que-mas-anadir.html  curso.js  estilos.css  index.html
reports/: query_memory_v2_general_operation_benchmark.json  query_memory_v2_operation_benchmark.json  query_memory_v2_threshold_calibration.json
scripts/: benchmark_query_memory_v2_real.py
tests/: test_api.py  test_observability_langsmith.py  test_query_json_tool_logs.py  test_query_memory.py  test_query_memory_v2.py  test_query_memory_v2_evaluation.py  test_query_optimizer.py  test_result_formatter.py  test_sql_validator.py
tests/evaluation/: query_memory_cases.json  query_memory_semantic_collision_cases.json
