[project]
name = "proyecto-final"
version = "0.1.0"
description = "Proyecto de fin de curso de PEIAMLOPS"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "numpy<2.0.0",             # Soluciona el choque de compatibilidad con Torch
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
    "torch==2.4.1",
    "transformers>=4.38.0",    # Soluciona el error del módulo no encontrado
    "langchain-google-genai>=4.2.7",
    "langchain-core>=1.4.9",
    "langchain-chroma>=1.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true 

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
