[project]
name = "proyecto-final"
version = "0.2.0"
description = "Proyecto de fin de curso de PEIAMLOPS"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # --- LangChain core y proveedores ---
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",     # ChatGoogleGenerativeAI + GoogleGenerativeAIEmbeddings
    "langchain-chroma>=1.1.0",           # Wrapper LangChain para ChromaDB
    "langchain-community>=0.4.2",        # SQLDatabase (ejecución de SQL contra Supabase)
    "langchain-huggingface>=0.1.0",      # HuggingFacePipeline (necesario para defog/sqlcoder)
    "langchain-openai>=0.3.0",           # ChatOpenAI con base_url → Cloudflare Workers AI / vLLM
    # --- Solución al ImportError ---
    # Fuerza una versión reciente para evitar el error 'from_json' de OpenAI
    # --- Base de datos vectorial ---
    "chromadb>=1.5.9",
    # --- API ---
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
    # --- Modelos HuggingFace (SQLPromptShield + futuro defog/sqlcoder) ---
    "torch==2.4.1",
    "transformers>=4.38.0",
    "accelerate>=0.30.0",                # Requerido por from_pretrained con device_map
    "bitsandbytes>=0.43.0",              # Quantización 4-bit para defog/sqlcoder
    # --- Datos y utilidades ---
    "numpy<2.0.0",                       # Soluciona choque de compatibilidad con Torch
    "pandas<=3.0.3",                     # Fijado a <=3.0.3 para evitar la versión 3.0.4 (yanked)
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    # --- Base de datos relacional ---
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.50",
    "jiter>=0.6.0",
    "babel>=2.17,<3",
    "streamlit>=1.60.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
